third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf-8-in-keyword.exp

Diagnostics:
error: invalid character
  ┌─ tests/checking/utf8-comment/utf-8-in-keyword.move:4:14
  │
4 │         const字符串 C: vector<u8> = b"abc";
  │              ^^ Invalid character: `字`
